# block-youtube-shorts

./: block_youtube_shorts.py  pyproject.toml
